--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-     <section class="py-5">
+     <section class="py-5 mt-5 rounded-3">
       <div class="container">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -112,7 +112,7 @@
      <section class="item-section py-5">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
               <div class="watch-item d-flex align-items-center">
                 <div class="item-content">
                   <h1>Watch</h1>
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
               <div class="bag-item d-flex align-items-center">
                 <div class="item-content">
                   <h1>Bags</h1>
@@ -132,7 +132,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
               <div class="shos-item d-flex align-items-center">
                 <div class="item-content">
                   <h1>Shoes</h1>
@@ -153,7 +153,7 @@
 
         <div class="row">
           
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
@@ -169,7 +169,7 @@
   
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
@@ -185,7 +185,7 @@
   
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
@@ -212,7 +212,7 @@
 
         <div class="row">
           
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
@@ -228,7 +228,7 @@
   
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
@@ -244,7 +244,7 @@
   
           </div>
 
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
 
             <div class="item-sector">
               <div class="item-img">
